# hubsync

./: .gitignore  AGENTS.md  README.md  archive_e2e_test.go  archive_gc.go  archive_gc_test.go  archive_one.go  archive_task.go  archive_worker.go  archive_worker_test.go  auth.go  auth_test.go  broadcast.go  broadcast_test.go  client.go  client_push.go  client_store.go  client_store_test.go  config.go  config_file.go  config_file_test.go  db.go  delta.go  delta_test.go  e2e_test.go  go.mod  go.sum  hasher.go  hub.go  hub_lock.go  hub_lock_test.go  hubsync.go  hubsync.pb.go  hubsync.proto  hubsync_json_test.go  protocol.go  protocol_test.go  providers.go  push.go  push_test.go  (+16 more)
archive/: archive.go  b2store.go  b2store_integration_test.go  fake.go  fake_test.go  key.go  key_test.go
cli/hubsync/: README.md  archive.go  archive_gc.go  archive_gc_test.go  archive_test.go  init.go  init_test.go  ls_cli_test.go  main.go  oneshot.go  render.go  wire.go  wire_gen.go
cli/hubsync/template/: config.toml
docs/: client-read-write-spec.md  ios-fileprovider-spec.md  rust-client-spec.md  spec.md
internal/taskrunner/: api_test.go  archive.go  archive_test.go  main.go  plan.go  runner.go  runner_test.go  schema.go  task.go
ios/: .gitignore  Makefile.py  project.yml
ios/App/: Info.plist
ios/FileProviderExtension/: HubSyncFileProvider.entitlements  Info.plist
rust-client/: .gitignore  Cargo.toml  build.rs
rust-client/proto/: hubsync.proto
rust-client/src/: client.rs  content.rs  error.rs  ffi.rs  lib.rs  protocol.rs  store.rs
rust-client/tests/: integration.rs
(+8 files in other folders)
