[package]
name = "hubsync-client"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
prost = "0.13"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
hex = "0.4"
glob-match = "0.2"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build = "0.13"
